Fix word wrap

--- a/src/components/Editor.module.css
+++ b/src/components/Editor.module.css
@@ -20,5 +20,5 @@
   font-family: "Source Code Pro", monospace;
   border: 2px solid #1e1e3f;
   color: #1e1e3f;
-  word-break: break-all;
+  word-break: break-word;
 }
